return NEED_MORE_DATA from nsWebPDecoder::ReadHeader if ICC was specified but chunk not found
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
People
(Reporter: tnikkel, Assigned: tnikkel)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
Assignee | ||
Comment 1•2 years ago
|
||
Bug 1780834 caused this bug. If we are not complete then we might need to
wait for more data to come in that has the ICCP chunk.
Updated•2 years ago
|
Updated•2 years ago
|
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1780834
Comment 3•2 years ago
|
||
Set release status flags based on info from the regressing bug 1780834
Comment 5•2 years ago
|
||
bugherder |
Comment 6•2 years ago
|
||
The patch landed in nightly and beta is affected.
:tnikkel, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox107
towontfix
.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 7•2 years ago
|
||
Comment on attachment 9298147 [details]
Bug 1794754. Return NEED_MORE_DATA from nsWebPDecoder::ReadHeader if ICC was specified but chunk not found r?aosmond
Beta/Release Uplift Approval Request
- User impact if declined: icc color profile of webp files could be ignored in some circumstances
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): very small change to move us closer to what we used to do
- String changes made/needed:
- Is Android affected?: Yes
Comment 8•2 years ago
|
||
Comment on attachment 9298147 [details]
Bug 1794754. Return NEED_MORE_DATA from nsWebPDecoder::ReadHeader if ICC was specified but chunk not found r?aosmond
Approved for 107.0b4.
Comment 9•2 years ago
|
||
bugherder uplift |
Updated•2 years ago
|
Updated•2 years ago
|
Description
•