image/decoders/nsWebPDecoder.cpp
@@ -360,6 +360,10 @@ nsWebPDecoder::ReadHeader(WebPDemuxer* aDemuxer,
         WebPDemuxReleaseChunkIterator(&iter);
 
       } else {
+        if (!aIsComplete) {
+          return LexerResult(Yield::NEED_MORE_DATA);
+        }
+
         MOZ_LOG(sWebPLog, LogLevel::Warning,
                 ("[this=%p] nsWebPDecoder::ReadHeader header specified ICCP "
                  "but no ICCP chunk found, ignoring\n",
